# agent-watchbench

./: .gitignore  LICENSE  PROVENANCE.md  README.md  SAFETY.md  agent_watchbench.py  pyproject.toml
.github/workflows/: ci.yml
docs/: deferred-branch-freshness.md  final-candidate-review-2026-07-20.md  final-candidate-review-template.md  private-first-repo-decision.md  private-pr-description-template.md  private-pr-open-packet.md  private-pr-review-checklist.md  public-release-gate.md  release-candidate-evidence.md  release-readiness-index.md
docs/archive/: final-candidate-review-2026-07-20.md  private-first-repo-decision.md  private-pr-description-template.md  private-pr-open-packet.md  private-pr-review-checklist.md  release-candidate-evidence.md
examples/: fixture-audit-report.md  fixture-report.md  private-pr-packet-audit-report.md  project-ranking-report.md  release-index-audit-report.md  release-sync-audit-report.md  secret-scan-report.md
examples/fixture-root/learning/reviews/: 2099-01-02.md
examples/fixture-root/projects/: ideas.jsonl
examples/release-sync-root/: candidate-review.md
examples/secret-scan-root/: README.md
examples/secret-scan-root/subdir/: config.txt
tests/: test_agent_watchbench.py
tests/fixtures/secret-scan-root/: .env.sample  README.md
